examples/test/conf/lb-policy/Service_default_lb-rr-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-rr-test-service
  namespace: edgion-default
spec:
  ports:
    - port: 8080
      protocol: TCP
